istio-helloworld/helloworld.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-svc
  labels:
    app: helloworld
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: helloworld

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v1
spec:
  selector:
    matchLabels:
      app: helloworld
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: helloworld
        version: v1
    spec:
      containers:
      - name: helloworld
        image: alexmt/rollouts-demo:blue
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 32Mi
            cpu: 5m

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v2
spec:
  selector:
    matchLabels:
      app: helloworld
      version: v2
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: helloworld
        version: v2
    spec:
      containers:
      - name: helloworld
        image: alexmt/rollouts-demo:yellow
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
