istio-helloworld/helloworld-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-virtualsvc
spec:
  hosts:
  - istio-helloworld.dev.argoproj.io
  gateways:
  - helloworld-gateway
  http:
  - route:
    - destination:
        host: helloworld-svc
        subset: v1
      weight: 80
    - destination:
        host: helloworld-svc
        subset: v2
      weight: 20
